added travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,14 @@ before_install:
   - docker build -t wojtazik/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true wojtazik/docker-react npm run test -- --coverage
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-central-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-central-1-721189591237"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  acces_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
