--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ deploy:
     bucket_path: "test.docker-react"
     on:
       all_branches: true
-      condition: $TRAVIS_BRANCH =~ ^feature-.$
+      condition: $TRAVIS_BRANCH =~ ^feature-.*$
     acces_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
